Section 9 Security/webhooks-lab-mutated-pod-with-override.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2024-07-20T03:32:28Z"
  labels:
    app: pod-with-override
  name: pod-with-override
  namespace: default
  resourceVersion: "2753"
  uid: 17e31ba0-c4e8-4b33-90a5-04917fa77163
spec:
  containers:
  - command:
    - sh
    - -c
    - echo I am running as user $(id -u)
    image: busybox
    imagePullPolicy: Always
    name: busybox
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-8td4w
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: controlplane
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: OnFailure
  schedulerName: default-scheduler
  securityContext:
    runAsNonRoot: false
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-8td4w
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2024-07-20T03:32:31Z"
    status: "False"
    type: PodReadyToStartContainers
  - lastProbeTime: null
    lastTransitionTime: "2024-07-20T03:32:28Z"
    reason: PodCompleted
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2024-07-20T03:32:28Z"
    reason: PodCompleted
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2024-07-20T03:32:28Z"
    reason: PodCompleted
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2024-07-20T03:32:28Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://907be98e03ab5dc6e4c652244a983954ccd8840864681269ecb9be7f78327c2c
    image: docker.io/library/busybox:latest
    imageID: docker.io/library/busybox@sha256:9ae97d36d26566ff84e8893c64a6dc4fe8ca6d1144bf5b87b2b85a32def253c7
    lastState: {}
    name: busybox
    ready: false
    restartCount: 0
    started: false
    state:
      terminated:
        containerID: containerd://907be98e03ab5dc6e4c652244a983954ccd8840864681269ecb9be7f78327c2c
        exitCode: 0
        finishedAt: "2024-07-20T03:32:29Z"
        reason: Completed
        startedAt: "2024-07-20T03:32:29Z"
  hostIP: 192.4.224.8
  hostIPs:
  - ip: 192.4.224.8
  phase: Succeeded
  podIP: 10.244.0.8
  podIPs:
  - ip: 10.244.0.8
  qosClass: BestEffort
  startTime: "2024-07-20T03:32:28Z"
